# hicma

./: .gitignore  .gitmodules  CMakeLists.txt  Data.md  INSTALL  INSTALL.md  Jenkinsfile  LICENSE  README.md  RELEASE.md  annotated.html  annotated_dup.js  classes.html  codelet__zgemm_8c.html  codelet__zgemm_8c.js  codelet__zgemm_8c_source.html  codelet__zgemm__bdcd_8c.html  codelet__zgemm__bdcd_8c.js  codelet__zgemm__bdcd_8c_source.html  codelet__zgytlr_8c.html  codelet__zgytlr_8c.js  codelet__zgytlr_8c_source.html  codelet__zgytlr__diag_8c.html  codelet__zgytlr__diag_8c.js  codelet__zgytlr__diag_8c_source.html  codelet__zhagcm_8c.html  codelet__zhagcm_8c.js  codelet__zhagcm_8c_source.html  codelet__zhagdm_8c.html  codelet__zhagdm_8c.js  codelet__zhagdm_8c_source.html  codelet__zpotrf_8c.html  codelet__zpotrf_8c.js  codelet__zpotrf_8c_source.html  codelet__zsyrk_8c.html  codelet__zsyrk_8c.js  codelet__zsyrk_8c_source.html  codelet__ztrsm_8c.html  codelet__ztrsm_8c.js  codelet__ztrsm_8c_source.html  (+193 more)
acosutic/: frequency.f90  geo_curve_tri_1126.inp  geo_curve_tri_22370.inp  geo_curve_tri_2560.inp  geo_curve_tri_396.inp  geo_curve_tri_4032.inp  global_com.f90  global_dim.f90  global_geom.f90  gmres_fannew.f90  hard_nys.f90  inci_rhs.f90  mom_2.inp  near_scafield.f90
acosutic2/: curve_para.f90  frequency.f90  gaussintegraldata.f90  geo_curve_tri_1008.inp  geo_curve_tri_10616.lis  geo_curve_tri_11074.lis  geo_curve_tri_11548.lis  geo_curve_tri_120.inp  geo_curve_tri_12046.lis  geo_curve_tri_13140.lis  geo_curve_tri_14338.inp  geo_curve_tri_14410.lis  geo_curve_tri_15108.lis  geo_curve_tri_15914.lis  geo_curve_tri_16180.inp  geo_curve_tri_16718.lis  geo_curve_tri_17598.lis  geo_curve_tri_18530.lis  geo_curve_tri_252.inp  geo_curve_tri_3156.inp  geo_curve_tri_3170.inp  geo_curve_tri_5332.lis  geo_curve_tri_622.inp  geo_curve_tri_6224.lis  geo_curve_tri_7320.inp  geo_curve_tri_8738.lis  geo_curve_tri_9420.lis  geo_curve_tri_9798.lis  geo_mesh_10790.inp  geo_mesh_11460.inp  geo_mesh_12366.inp  geo_mesh_14212.inp  geo_mesh_15228.inp  geo_mesh_19020.inp  geo_mesh_19890.inp  geo_mesh_20232.inp  geo_mesh_21696.inp  geo_mesh_23616.inp  geo_mesh_2910.inp  geo_mesh_4452.inp  (+14 more)
aux/compute/: zdiag.c  zproblem.c  zuncompress.c
aux/descutil/: descprint.c  descsame.c
aux/include/: auxcompute_z.h  auxdescutil.h
cmake_modules/: GenPkgConfig.cmake  PrintOpts.cmake
compute/: ddiag.c  dgemm.c  dgenmat.c  dgenrhs.c  dgetrf.c  dgytlr.c  dhagcm.c  dhagdm.c  dpotrf.c  dtrsm.c  duncompress.c  hicma_ztile.c  pdgemm.c  pdgenmat.c  pdgenrhs.c  pdgetrf.c  pdgytlr.c  pdhagcm.c  pdhagdm.c  pdpotrf.c  pdtrsm.c  pzcpy.c  pzgemm.c  pzgene.c  pzgene_rhs.c  pzgenmat.c  pzgenrhs.c  pzgetrf.c  pzgytlr.c  pzgytlr_buffer.c  pzhagcm.c  pzhagdm.c  pzlacpy.c  pzlaset.c  pzplrnt.c  pzpotrf.c  pztrsm.c  zcpy.c  zdiag.c  zgemm.c  (+15 more)
control/: hicma_common.h  hicma_compute_z.h  hicma_config.h  hicma_init.c  hicma_tile.c
docs/: config.in  index.md
exec_env_info_ADSC20/: 128-core-amd-epyc-output.txt  32-core-crayxc40-output.txt  40-core-cascadelake-output.txt  48-core-crayxc-output.txt  64-core-thunder-arm-output.txt
exp/: cham-gemm.sh  cham-isambard-simple.sh  ctrial.sh  distmem.sh  distmemamd.sh  distmemcs.sh  distruns.sh  distrunsamd.sh  distrunscs.sh  inner-product-gemm.sh  shmem-mpi-test.sh  shmem.sh  shruns.sh  tr.sh  valgrind.supp
exp/barcharts/: common.py  compress-compute.py
exp/cases/: 10M.txt  1M-8M.txt  1M-acc.txt  1M-few-case.txt  1M.txt  500K-1M.txt  50K2M.txt  50K500K.txt  ae-10M.txt  allsize-allnb-1.txt  biggersize-allnb-1.txt  biggersize-allnb-2.txt  cfd_virus1024.sh  cfd_virus1_batch.sh  cfd_virus4.sh  cfd_virus4_batch.sh  cfd_virus_10km.sh  cfd_virus_basis.sh  cfd_virusdist.sh  cham.txt  cham32.txt  edsin.sh  edsin2.sh  fxt-100K-16nodes.txt  ka-lu-test-mat-gen.sh  lu-arm-ka.sh  lu-cases-ra2-shaheen16-ideas.sh  lu-fl-ra.sh  lu-ideas-vl.sh  lu-ka-cham.sh  lu-ka.sh  lu-sh-ra.sh  lu-shaheen-ra.sh  lu-shaheen-ra128.sh  lu-shaheen-ra16.sh  lu-shaheen-ra256.sh  lu-shaheen-ra32.sh  lu-shaheen-ra64.sh  lu-vul-ka.sh  lu-vul-ra.sh  (+22 more)
exp/ci/: test01.sh  (+1 more)
experiment_ADSC20/: S1.sh  S1slurm.sh  S2.sh  S2slurm.sh  singlevirus.sh  singlevirusslurm.sh
include/: hicma.h  hicma_common.h  hicma_config.h  hicma_constants.h  hicma_init.h  hicma_kernels.h  hicma_runtime.h  hicma_runtime_z.h  hicma_struct.h  hicma_types.h  hicma_z.h  ka_counts.h  ka_defines.h  ka_util.h  ka_util_structs.h
misc/: README.txt  descutil.c  dstat.c  zproblem.c  zstat.c
scripts/: allocate-interactive-node-isambard.sh  build-amd-rome.sh  build-distmpi.sh  build-isambard-netlib.sh  build-isambard.sh  build-macos-nompi-mkl.sh  build-nompi.sh  build-shared.sh  build-starsh-cpp-intel-parsec.sh  build-xc40.sh  build.sh  intel.modules  modules-amd-rome.sh  modules-cs.sh  modules-ecrc-mpi.sh  modules-ecrc-ub18-mpi.sh  modules-ecrc-ub18.sh  modules-ecrc.sh  modules-isambard-allinea.sh  modules-isambard-cray.sh  modules-shaheen-gcc-mkl-starpu.sh  modules-xc40.sh  power8.modules  test-trsm.sh  test.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  (+28 more)
testing/: CMakeLists.txt  electrodynamics.c  testing_dauxiliary.c  testing_dauxiliary.h  testing_dposv.c  testing_dtrsmd.c  testing_zauxiliary.c  testing_zauxiliary.h  testing_zposv.c  testing_ztrsmd.c
timing/: CMakeLists.txt  time_dgemm_tile.c  time_dpotrf_tile.c  time_dpotrf_tile_batch.c  time_zgemm_tile.c  time_zgetrf_tile.c  time_zgetrf_tile_buffer.c  time_zgetrf_tile_chameleon.c  time_zpotrf_tile.c  time_zpotrf_tile_batch.c  timing.c  timing.h  timing_auxiliary.c  timing_auxiliary.h  timing_dauxiliary.c  timing_dauxiliary.h  timing_zauxiliary.c  timing_zauxiliary.h
(+158 files in other folders)
